2006-11-12  Bruno Haible  <bruno@clisp.org>

	* modules/libcroco: New file.
	* m4/libcroco.m4: New file.
	* lib/libcroco/cr-additional-sel.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-additional-sel.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-attr-sel.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-attr-sel.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-cascade.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-cascade.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-declaration.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-declaration.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-doc-handler.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-doc-handler.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-enc-handler.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-enc-handler.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-fonts.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-fonts.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-input.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-input.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-num.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-num.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-om-parser.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-om-parser.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-parser.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-parser.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-parsing-location.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-parsing-location.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-prop-list.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-prop-list.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-pseudo.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-pseudo.h: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-rgb.c: New file, from libcroco-0.6.1.
	* lib/libcroco/cr-rgb.h: New file, from libcroco-0.6.1.